--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dashboard": "^0.0.1",
+    "link": "^0.1.5",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-pro-sidebar": "^0.6.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redirect": "^0.2.0",
+    "route": "^0.2.5",
+    "router": "^1.3.5",
+    "switch": "^0.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
