--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.22.0",
     "dashboard": "^0.0.1",
+    "email-validator": "^2.0.4",
+    "formik": "^2.2.9",
     "link": "^0.1.5",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
@@ -21,7 +24,8 @@
     "route": "^0.2.5",
     "router": "^1.3.5",
     "switch": "^0.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
